--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<a href="blank" class="top-menu"><span class="glyphicon glyphicon-plus"> Fill out an application for an excursion</span></a>
+<a class="btn btn-outline-primary" href="blank" class="top-menu"><span class="glyphicon glyphicon-plus"> Fill out an application for an excursion</span></a>
 
 {% endblock %}
