--- a/app/templates/submitted.html
+++ b/app/templates/submitted.html
@@ -3,6 +3,6 @@
 {% block content %}
 
 Thanks, your application is submitted!
-<a href="index">HOME</a>
+<a class="btn btn-primary" href="index">HOME</a>
 
 {% endblock %}
