Added function to view excursion schedule

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
-<a class="btn btn-outline-primary" href="blank" class="top-menu"><span class="glyphicon glyphicon-plus"> Fill out an application for an excursion</span></a>
+<a class="btn btn-outline-primary btn-lg top-menu" href="blank">
+	<span class="glyphicon glyphicon-plus"> Fill out an application for an excursion</span>
+</a>
+<p>
+	<a class="btn btn-outline-primary btn-lg top-menu" href="schedule">
+		<span class="glyphicon glyphicon-calendar"> View all excursions</span>
+	</a>
+</p>
 
 {% endblock %}
