--- a/app/templates/base_generic.html
+++ b/app/templates/base_generic.html
@@ -6,28 +6,30 @@
         System of organization and accounting of excursions in JINR
     </title>
     {% endblock %}
+    <style type="text/css">
+       .main_title {
+        color: white;
+       }
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- Добавление дополнительного статического CSS файла
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">-->
 </head>
 
 <body>
-    <div class="page-header col-md-12">
-        <h1><a href="/">System of organization and accounting of excursions in JINR</a></h1>
+    <div class="page-header col-md-12 bg-primary text-white">
+        <h1><a class="main_title" href="/">System of organization and accounting of excursions in JINR</a></h1>
         <nav class="nav">
             {% if user.is_authenticated %}
                 <h4>Hello, {{ user.get_full_name }}!</h4>
                 <button type="button" class="btn btn-outline-primary">
                     <a href="{% url 'logout'%}?next={{request.path}}" role="button">Logout</a>
                 </button>
-            {% else %}
-                <p><a class="btn btn-primary" href="{% url 'login'%}?next={{request.path}}" role="button">Login</a></p>   
             {% endif %}
         </nav>
     </div>
