--- a/app/templates/excursion_form.html
+++ b/app/templates/excursion_form.html
@@ -8,7 +8,8 @@
 	<table class="table">
 		<tr>
 			<th colspan="4">{{ form.id_facility|as_crispy_field }}</th>
-			<th><label for="id_id_facility" class="col-form-label  requiredField">
+			<th>
+				<label for="id_id_facility" class="col-form-label  requiredField">
 				Select areas:<span class="asteriskField">*</span>
 	    		</label>
 	    		{{ form.id_area|safe }}
@@ -51,6 +52,13 @@
 	                'id_facility': id_facility,
 	            },
 	            success: function(data) {
+	            	// set all checkboxes.checked = false
+	            	$('#id_id_area li label input').each(function () {
+				        $(this).prop('checked', false);
+				    });
+
+	            	// if current area doesn't belong to current facility then hide its label
+	            	// else show it
 	            	$('#id_id_area li').each(function () {
 					    var str = $(this).text().replace(/\s+/g, '');
 						if (!data['result'].includes(str)) {
@@ -85,16 +93,6 @@
         	});
           }
     })
-
-    function addCheckbox(name) {
-	   var container = $('#div_areas');
-	   var inputs = container.find('input');
-	   var id = inputs.length+1;
-
-	   $('<input />', { type: 'checkbox', id: 'cb'+id, value: name }).appendTo(container);
-	   $('<label />', { 'for': 'cb'+id, text: name }).appendTo(container);
-	}
-
 
     function getCookie(name){
 	    var cookieValue = null;
