--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -4,6 +4,8 @@
 <h2>Schedule</h2>
 <h5>To change some field just click by the cell</h5>
 
+<form action="update_excursion/" method="post">
+{% csrf_token %}
 <table id="schedule_table" class="table table-bordered" role="grid">
 	<thead>
 		<tr>
@@ -21,7 +23,6 @@
 		</tr>
 	</thead>
 	<tbody class="table-hover">
-		
 	  	{% for ex in excursions %}
 	  		<tr role="row" class="odd">
 				<th id="id_facility">{{ ex.id_facility_id }}</th>
@@ -41,9 +42,11 @@
 				<td id="age_excursion">{{ ex.age_excursion }}</td>
 			</tr>
 		{% endfor %}
-	
 	  </tbody>
 </table>
+<input id="bt_change_ex" class="btn btn-warning" type="submit" value="CHANGE EXCURSION" style="float: right; display: none;" />
+</form>
+
 
 <!-- Modal Show-->
   <div class="modal fade" id="myModal" role="dialog">
@@ -89,26 +92,35 @@ $("#schedule_table").on("click", "td", function() {
 		td.text($("#new_value").val());
 		$("#myModal").modal("hide");
 		td.css("background-color", "#f0ad4e");
+		$("#bt_change_ex").show();
 	})
-
-     //$.ajax ({
-        //url: "update_excursion/",
-        //type: "post",
-        //data: {
-        	//csrfmiddlewaretoken: getCookie('csrftoken'),
-            //'field': $(this).attr('id'),
-            //'value': $(this).text(),
-        //},
-        //success: function(data) {
-        	//alert('ok!');
-		//},
-		//error: function(xhr, ajaxOptions, thrownError) {
-            //console.log(xhr.status);
-            //console.log(xhr.responseText);
-            //console.log(thrownError);
-        //},
-	//});
 });
+
+$("#bt_change_ex").on("click", function(){
+	$.ajax ({
+        url: "update_excursion/",
+        type: "post",
+        data: {
+        	csrfmiddlewaretoken: getCookie('csrftoken'),
+        	'id_excursion': 
+            'name_organizator': $("#name_organizator"),
+            'occasion_excursion': $("#occasion_excursion"),
+            'time_period_excursion': $("#time_period_excursion"),
+            'language_excursion': $("#language_excursion"),
+            'auditory_excursion': $("#auditory_excursion"),
+            'participants_excursion': $("#participants_excursion"),
+            'age_excursion': $("#age_excursion"),
+        },
+        success: function(data) {
+        	alert('Excursion has been changed!');
+		},
+		error: function(xhr, ajaxOptions, thrownError) {
+            console.log(xhr.status);
+            console.log(xhr.responseText);
+            console.log(thrownError);
+        },
+	});
+})
 
 
 function getCookie(name){
