Added function to view individual excursion

--- a/app/templates/excursion_form.html
+++ b/app/templates/excursion_form.html
@@ -32,7 +32,7 @@
 	    </tr>
 	</table>
 
-	<input class="btn btn-primary" type="submit" value="SEND"/>
+	<input class="btn btn-warning" type="submit" value="SEND"/>
 </form>
 
 
