--- a/app/templates/excursion_info.html
+++ b/app/templates/excursion_info.html
@@ -7,7 +7,7 @@
 
 	<table class="table">
 		<tr>
-			<th colspan="4">{{ form.id_facility|as_crispy_field }}</th>
+			<th id="th_id_facility" colspan="4">{{ form.id_facility|as_crispy_field }}</th>
 			<th>
 				<label for="id_id_facility" class="col-form-label  requiredField">
 				Select areas:<span class="asteriskField">*</span>
@@ -32,7 +32,7 @@
 	    </tr>
 	</table>
 
-	<input class="btn btn-warning" type="submit" value="SEND"/>
+	<input class="btn btn-warning" type="submit" value="CHANGE EXCURSION"/>
 </form>
 
 {% endblock %}
