--- a/app/templates/submitted.html
+++ b/app/templates/submitted.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-Thanks, your application is submitted!
+{{ result }}
 <a class="btn btn-primary" href="index">HOME</a>
 
 {% endblock %}
