--- a/app/templates/excursion_form.html
+++ b/app/templates/excursion_form.html
@@ -2,33 +2,35 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+<h3 style="margin-bottom: 20px;" class="text-primary"><span class="glyphicon glyphicon-pencil"></span>Send a new request for the organization of the excursion</h3>
+
 <form action="send_blank/" method="post">
 	{% csrf_token %}
 
 	<table class="table">
 		<tr>
-			<th colspan="4">{{ form.id_facility|as_crispy_field }}</th>
-			<th>
+			<td colspan="4">{{ form.id_facility|as_crispy_field }}</td>
+			<td>
 				<label for="id_id_facility" class="col-form-label  requiredField">
 				Select areas:<span class="asteriskField">*</span>
 	    		</label>
 	    		{{ form.id_area|safe }}
-	    	</th>
+	    	</td>
 	    </tr>
 
 		<tr>		
-			<th colspan="2">{{ form.name_organizator|as_crispy_field }}</th>
-	    	<th>{{ form.id_guide|as_crispy_field }}</th>
-	    	<th>{{ form.occasion_excursion|as_crispy_field }}</th>
-	    	<th>{{ form.date_excursion|as_crispy_field }}</th>
+			<td colspan="2">{{ form.name_organizator|as_crispy_field }}</td>
+	    	<td>{{ form.id_guide|as_crispy_field }}</td>
+	    	<td>{{ form.occasion_excursion|as_crispy_field }}</td>
+	    	<td>{{ form.date_excursion|as_crispy_field }}</td>
 	    </tr>
 
 	    <tr>
-	    	<th>{{ form.time_period_excursion|as_crispy_field }}</th>	    	
-	    	<th>{{ form.language_excursion|as_crispy_field }}</th>
-	    	<th>{{ form.auditory_excursion|as_crispy_field }}</th>
-			<th>{{ form.participants_excursion|as_crispy_field }}</th>
-			<th>{{ form.age_excursion|as_crispy_field }}</th>
+	    	<td>{{ form.time_period_excursion|as_crispy_field }}</td>	    	
+	    	<td>{{ form.language_excursion|as_crispy_field }}</td>
+	    	<td>{{ form.auditory_excursion|as_crispy_field }}</td>
+			<td>{{ form.participants_excursion|as_crispy_field }}</td>
+			<td>{{ form.age_excursion|as_crispy_field }}</td>
 	    </tr>
 	</table>
 
