--- a/app/templates/submitted.html
+++ b/app/templates/submitted.html
@@ -3,6 +3,6 @@
 {% block content %}
 
 {{ result }}
-<a class="btn btn-primary" href="index">HOME</a>
+<a class="btn btn-primary" href="/">HOME</a>
 
 {% endblock %}
